# 2c

./: .gitmodules  CMakeLists.txt  README.md
2c/: CMakeLists.txt
2c/include/: 2c.h
2c/include/2c/: 2c.h
2c/include/core/: assert.h
2c/include/core/queue/: queue.h
2c/include/core/thread/: thread.h
2c/include/core/time/: timer.h
2c/include/event/: event.h  event_queue.h
2c/include/renderer/: index_buffer.h  renderer.h  shader.h  vertex_buffer.h
2c/src/: pch.h
2c/src/core/: api.h  assert.h  core.c  core.h  mutex.c  mutex.h  platform.h  thread.c  window.c  window.h
2c/src/core/queue/: queue.c
2c/src/core/thread/: mutex.c  thread.c
2c/src/core/time/: timer.c
2c/src/event/: event.c  event_queue.c
2c/src/renderer/: index_buffer.c  misc.h  renderer.c  renderer.h  shader.c  shader.h  texture.h  vertex_array.c  vertex_array.h  vertex_buffer.c  vertex_buffer.h
2c/src/timer/: timer.c  timer.h
2c/src/window/: window.c  window.h
demo/: CMakeLists.txt
demo/src/: main.c
